Prevent autoscaling on iphone

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
